add css info main

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" style="color: #71ab00" href="#">WebSiteName</a>
+      <a class="navbar-brand" style="color: #71ab00" href="#">Nguyên An</a>
     </div>
     <ul class="navbar-menu">
       <li class="active"><a href="#">Home</a></li>
@@ -20,14 +20,29 @@
     </ul>
   </div>
 </nav>
-<div class="container"> 
-	<div class="row"> 
-    	<div class="col"> 
-        	<div class="main1"></div>
-        </div>
-     </div>
+<div class="container">
+	<div class="row">
+		<div class="info"></div>
+	</div>
 </div>
-
+<div  class="container">
+	<div class="row">
+		<div class="col-sm-8">
+			<div class="exper">
+				<div class="proinfo">Professional info</div>
+				<div class="detallproinfo"><p> I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.</p></div>
+				<div class="workexp">Work experience</div>
+				
+				<div class="timelineword">job</div>
+				<div class="education">education</div>
+				<div class="timelineedu">Univesity</div>
+			</div>
+		</div>
+		<div class="col-sm-4">
+			<div class="skill">Facebook</div>
+		</div>
+	</div>
+	
 </div>
 <div class="container"> 
 	<div class="row"> 
@@ -36,7 +51,7 @@
             	<div> <h5> TESTIMONIAL</h5><p>“I'm a testimonial. Click to edit me and add text that says something nice about you and your services. Let your customers review you.”</p></div>
             </div>
         </div>
-        <div class="col-sm-4"> 
+       	<div class="col-sm-4"> 
         	<div class="main2">
             	<div> <h5> FAVORITE QUOTE</h5><p>"I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a story and let your users know a little more about you."</p></div>
             </div>
